# omnisharp_bazel

./: .editorconfig  .gitignore  BUILD.bazel  LICENSE  MODULE.bazel  README.md  REPO.bazel  omnisharp.json
omnisharp_bazel/: BUILD.bazel  BazelProjectManager.cs  BazelProjectSystem.cs  BazelShell.cs  Document.cs  FileSystemSource.cs  Label.cs  OnDemandSource.cs  Package.cs
